--- a/app/src/main/res/layout/horario_item.xml
+++ b/app/src/main/res/layout/horario_item.xml
@@ -3,18 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:orientation="horizontal">
-    <LinearLayout
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginStart="5dp">
+    android:layout_height="60dp"
+    android:orientation="vertical"
+    >
+
         <TextView
             android:id="@+id/tvHora"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="30sp"/>
-    </LinearLayout>
+            android:textSize="45sp"
+            android:text="dadsdad"
+            android:textAlignment="center"
+            android:background="#C0C0C0"
+            android:textColor="#000"/>
 
 </LinearLayout>
