--- a/app/src/main/res/layout/ponto_item.xml
+++ b/app/src/main/res/layout/ponto_item.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="100dp"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvPonto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Av. Pinto de Aguiar (sentido Paralela) - Atras do primeiro ponto de onibus"
+        android:text="Av. Pinto de Aguiar(sentido Paralela) - Atras do primeiro ponto de onibus"
+        android:textSize="28sp"
         android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textColor="@android:color/black"
+        />
 
 </LinearLayout>
