--- a/app/src/main/res/layout/activity_roteiro.xml
+++ b/app/src/main/res/layout/activity_roteiro.xml
@@ -6,10 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".acticity.ActivityRoteiro">
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="201dp"
+        tools:context=".acticity.PontoMapActivity" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_ponto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:layout_height="310dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/map" />
 
 </android.support.constraint.ConstraintLayout>
